syntax = "proto3";

package message;

option go_package = "github.com/ISSuh/sos/internal/domain/model/message";

import "google/protobuf/timestamp.proto";
import "domain/model/message/object_id.proto";
import "domain/model/message/block_id.proto";

message BlockHeader {
    ObjectID objectID = 1;
    BlockID blockID = 2;
    int32 index = 3;
    int32 size = 4;
    string node = 5;
    google.protobuf.Timestamp timestamp = 6;
    string checksum = 7;
}
