syntax = "proto3";

package message;

option go_package = "github.com/ISSuh/sos/internal/domain/model/message";

import "google/protobuf/timestamp.proto";
import "domain/model/message/object_id.proto";
import "domain/model/message/block_header.proto";

message Version {
    int32 number = 1;
    int32 size = 2;
    repeated BlockHeader blockHeaders = 3;
    google.protobuf.Timestamp createdAt = 4;
    google.protobuf.Timestamp modifiedAt = 5;
}
